--- a/frontend/vault.html
+++ b/frontend/vault.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Evidify Radiology Research</title>
+    <title>Evidify Vault</title>
   </head>
-  <body>
+  <body class="bg-slate-900 text-slate-100">
     <div id="root"></div>
-    <script type="module" src="/src/research-demo.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
